--- a/src/theme.styl
+++ b/src/theme.styl
@@ -3,7 +3,7 @@
 
 // action-sheet
 $action-sheet-color := $color-grey
-$action-sheet-active-color := $color-orange
+$action-sheet-active-color := #23A0FF
 $action-sheet-bgc := $color-white
 $action-sheet-active-bgc := $color-light-grey-opacity
 $action-sheet-title-color := $color-dark-grey
@@ -25,8 +25,8 @@ $btn-disabled-bgc := $color-light-grey-s
 $btn-disabled-bdc := $color-light-grey-s
 /// primary
 $btn-primary-color := $color-white
-$btn-primary-bgc := $color-orange
-$btn-primary-bdc := $color-orange
+$btn-primary-bgc := #23A0FF
+$btn-primary-bdc := #23A0FF
 $btn-primary-active-bgc := $color-dark-orange
 $btn-primary-active-bdc := $color-dark-orange
 /// light
@@ -42,10 +42,10 @@ $btn-outline-bdc := $color-grey
 $btn-outline-active-bgc := $color-grey-opacity
 $btn-outline-active-bdc := $color-grey
 /// outline-primary
-$btn-outline-primary-color := $color-orange
+$btn-outline-primary-color := #23A0FF
 $btn-outline-primary-bgc := transparent
-$btn-outline-primary-bdc := $color-orange
-$btn-outline-primary-active-bgc := $color-orange-opacity
+$btn-outline-primary-bdc := #23A0FF
+$btn-outline-primary-active-bgc := #23A0FF-opacity
 $btn-outline-primary-active-bdc := $color-dark-orange
 
 // toolbar
@@ -56,13 +56,13 @@ $toolbar-active-bgc := $color-active-grey
 $checkbox-color := $color-grey
 $checkbox-icon-color := $color-light-grey-s
 /// checked
-$checkbox-checked-icon-color := $color-orange
+$checkbox-checked-icon-color := #23A0FF
 $checkbox-checked-icon-bgc := $color-white
 /// disabled
 $checkbox-disabled-icon-color := $color-light-grey-ss
 $checkbox-disabled-icon-bgc := $color-light-grey-ss
 // checkbox hollow
-$checkbox-hollow-checked-icon-color := $color-orange
+$checkbox-hollow-checked-icon-color := #23A0FF
 $checkbox-hollow-disabled-icon-color := $color-light-grey-ss
 // checkbox-group
 $checkbox-group-bgc := $color-white
@@ -75,11 +75,11 @@ $radio-color := $color-grey
 $radio-icon-color := $color-light-grey-s
 /// selected
 $radio-selected-icon-color := $color-white
-$radio-selected-icon-bgc := $color-orange
+$radio-selected-icon-bgc := #23A0FF
 /// disabled
 $radio-disabled-icon-bgc := $color-light-grey-ss
 // radio hollow
-$radio-hollow-selected-icon-color := $color-orange
+$radio-hollow-selected-icon-color := #23A0FF
 $radio-hollow-disabled-icon-color := $color-light-grey-ss
 
 // dialog
@@ -92,7 +92,7 @@ $dialog-close-color := $color-light-grey
 $dialog-btn-color := $color-light-grey
 $dialog-btn-bgc := $color-white
 $dialog-btn-active-bgc := $color-light-grey-opacity
-$dialog-btn-highlight-color := $color-orange
+$dialog-btn-highlight-color := #23A0FF
 $dialog-btn-highlight-active-bgc := $color-light-orange-opacity
 $dialog-btn-disabled-color := $color-light-grey
 $dialog-btn-disabled-active-bgc := transparent
@@ -106,7 +106,7 @@ $index-list-anchor-bgc := #f7f7f7
 $index-list-item-color := $color-dark-grey
 $index-list-item-active-bgc := $color-light-grey-opacity
 $index-list-nav-color := $color-grey
-$index-list-nav-active-color := $color-orange
+$index-list-nav-active-color := #23A0FF
 
 // loading
 
@@ -114,7 +114,7 @@ $index-list-nav-active-color := $color-orange
 $picker-bgc := $color-white
 $picker-title-color := $color-dark-grey
 $picker-subtitle-color := $color-light-grey
-$picker-confirm-btn-color := $color-orange
+$picker-confirm-btn-color := #23A0FF
 $picker-confirm-btn-active-color := $color-light-orange
 $picker-cancel-btn-color := $color-light-grey
 $picker-cancel-btn-active-color := $color-light-grey-s
@@ -128,7 +128,7 @@ $popup-mask-opacity := .4
 
 // slide
 $slide-dot-bgc := $color-light-grey-s
-$slide-dot-active-bgc := $color-orange
+$slide-dot-active-bgc := #23A0FF
 
 // time-picker
 
@@ -150,13 +150,13 @@ $upload-file-bgc := $color-white
 $upload-file-remove-color := rgba(0, 0, 0, .8)
 $upload-file-remove-bgc := $color-white
 $upload-file-state-bgc := $color-mask-bg
-$upload-file-success-color := $color-orange
+$upload-file-success-color := #23A0FF
 $upload-file-error-color := #f43530
 $upload-file-status-bgc := $color-white
 $upload-file-progress-color := $color-white
 
 // switch
-$switch-on-bgc := $color-orange
+$switch-on-bgc := #23A0FF
 $switch-off-bgc := $color-white
 $switch-off-border-color := #e4e4e4
 
@@ -164,7 +164,7 @@ $switch-off-border-color := #e4e4e4
 $input-color := $color-grey
 $input-bgc := $color-white
 $input-border-color := $color-row-line
-$input-focus-border-color := $color-orange
+$input-focus-border-color := #23A0FF
 $input-placeholder-color := $color-light-grey-s
 $input-clear-icon-color := $color-light-grey
 
@@ -172,8 +172,8 @@ $input-clear-icon-color := $color-light-grey
 $textarea-color := $color-grey
 $textarea-bgc := $color-white
 $textarea-border-color := $color-row-line
-$textarea-focus-border-color := $color-orange
-$textarea-outline-color := $color-orange
+$textarea-focus-border-color := #23A0FF
+$textarea-outline-color := #23A0FF
 $textarea-placeholder-color := $color-light-grey-s
 $textarea-indicator-color := $color-light-grey-s
 
@@ -186,7 +186,7 @@ $select-bgc := $color-white
 $select-disabled-color := #b8b8b8
 $select-disabled-bgc := $color-light-grey-opacity
 $select-border-color := $color-light-grey-s
-$select-border-active-color := $color-orange
+$select-border-active-color := #23A0FF
 $select-icon-color := $color-light-grey
 $select-placeholder-color := $color-light-grey-s
 
@@ -211,7 +211,7 @@ $drawer-item-active-bgc := $color-light-grey-opacity
 // scroll-nav
 $scroll-nav-bgc := $color-white
 $scroll-nav-color := $color-grey
-$scroll-nav-active-color := $color-orange
+$scroll-nav-active-color := #23A0FF
 
 // image-preview
 $image-preview-counter-color := $color-white
